--- a/example/main.css
+++ b/example/main.css
@@ -12,6 +12,8 @@ html {
   -webkit-tap-highlight-color: transparent;
   text-rendering: optimizeLegibility;
   text-size-adjust: 100%;
+  font-size: 30px;
+  padding: 40px;
 }
 
 * {
@@ -20,25 +22,12 @@ html {
   box-sizing: border-box;
 }
 
-.frame {
-  position: absolute;
-  top: 200px;
-  left: 20px;
-  width: 32px;
-  height: 50px;
-  border: 1px solid #000;
-  /*overflow: hidden;*/
+.number-flip {
+  position: relative;
+  overflow: hidden;
 }
 
 .ctnr {
   position: relative;
-}
-
-.col {
-  font-size: 30px;
-  width: 30px;
-  font-weight: 900;
-  line-height: 50px;
-  text-align: center;
-  transition: all .2s;
+  display: inline-block;
 }
